--- a/app/src/main/res/layout/item_profile.xml
+++ b/app/src/main/res/layout/item_profile.xml
@@ -18,9 +18,11 @@
             android:id="@+id/img_item_profile"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:layout_marginStart="16dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintVertical_bias="0.16"
             tools:src="@tools:sample/avatars" />
 
         <TextView
